# Asociita

./: .gitignore  LICENSE
asociita/: README.md  pyproject.toml
asociita/asociita/components/archiver/: archive_manager.py
asociita/asociita/components/evaluator/: evaluation_manager.py  lsaa_evaluator.py  mr_evaluator.py  or_evaluator.py  sample_evaluator.py
asociita/asociita/components/nodes/: federated_node.py
asociita/asociita/components/orchestrator/: evaluator_orchestrator.py  fedopt_orchestrator.py  generic_orchestrator.py  orchestrator.py
asociita/asociita/components/settings/: evaluator_settings.py  fedopt_settings.py  init_settings.py  settings.py
asociita/asociita/datasets/: fetch_data.py  load_cifar.py  load_fmnist.py  load_mnist.py  save_blueprint.py  shard_splits.py  shard_transformation.py
asociita/asociita/datasets/pytorch/: fetch_data.py  load_mnist.py
asociita/asociita/exceptions/: evaluatorexception.py  modelexception.py  settingexception.py
asociita/asociita/exceptions/settings/: init_exception.py  settingexception.py
asociita/asociita/models/pytorch/: cifar10.py  federated_model.py  fmnist.py  mnist.py
asociita/asociita/utils/: computations.py  custom_transformations.py  debugger.py  handlers.py  helpers.py  loggers.py  optimizers.py  orchestrations.py  showcase.py
asociita/tests/node_tests/: node_tests.py
asociita/tests/orchestrator_tests/: orchestrator_tests.py
examples/: Contribution_example.json  FedAdagard_example.json  contribution_results.csv  main.py  simulation_configuration.json
tests/: test_init.py  (+1 more)
(+42 files in other folders)
